--- a/Caronae/Base.lproj/LaunchScreen.storyboard
+++ b/Caronae/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="NavigationBarLogo" translatesAutoresizingMaskIntoConstraints="NO" id="j5z-do-QYX">
+                                <rect key="frame" x="251" y="288" width="100" height="25"/>
+                                <animations/>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="j5z-do-QYX" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="mYp-pv-OdI"/>
+                            <constraint firstItem="j5z-do-QYX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="yOK-oz-n1c"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,4 +35,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NavigationBarLogo" width="100" height="25"/>
+    </resources>
 </document>
